Avanzando la pagina de Mantenimiento

--- a/src/components/SectionInicio.astro
+++ b/src/components/SectionInicio.astro
@@ -11,32 +11,31 @@ import imagen4 from '../img/sectionInicio/recojo-domicilio.png'
     <div class="grid grid-cols-2 gap-8">
         <div class="max-w-4">
             <img src={imagen1.src} alt="" class="mx-auto w-full">
-            <p class="text-center">SERVICIO GARANTIZADO</p>
-            <p class="text-center">Nuestra garantia cubre todas las partes instaladas y los trabajos realizados en nuestro taller</p>
+            <p class="text-center text-gray-800 font-semibold text-xl py-2">SERVICIO GARANTIZADO</p>
+            <p class="text-center text-gray-700 font-medium text-lg py-1">Nuestra garantia cubre todas las partes instaladas y los trabajos realizados en nuestro taller</p>
         </div>
         <div class="grid content-between">
             <div class="grid grid-cols-2 gap-4">
                 <img src={imagen2.src} alt="" class="mx-auto w-full">
                 <div class="grid content-around justify-start">
-                    <h3>INFORMACION PERMANENTE</h3>
-                    <p>Te damos opciones de repuestos y servicios para adaptarnos a tu presupuesto.</p>
+                    <h3 class="text-gray-800 font-medium text-lg">INFORMACION PERMANENTE</h3>
+                    <p class="text-gray-700 font-light text-base">Te damos opciones de repuestos y servicios para adaptarnos a tu presupuesto.</p>
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4">
                 <img src={imagen3.src} alt="" class="mx-auto w-full">
                 <div class="grid content-around justify-start">
-                    <h3>TODOS LOS SERVICIOS</h3>
-                    <p>Desde el cambio de aceite hasta la reparación del motor, incluyendo planchado y pintura</p>
+                    <h3 class="text-gray-800 font-medium text-lg">TODOS LOS SERVICIOS</h3>
+                    <p class="text-gray-700 font-light text-base">Desde el cambio de aceite hasta la reparación del motor, incluyendo planchado y pintura</p>
                 </div>
 
             </div>
             <div class="grid grid-cols-2 gap-4">
                 <img src={imagen4.src} alt="" class="mx-auto w-full">
                 <div class="grid content-around justify-start">
-                    <h3>RECOJO A DOMICILIO</h3>
-                    <p>Recogemos tu vehículo, lo llevamos al taller y una vez finalizado el trabajo te lo entregamos en tu domicilio (zonas aledañas)</p>
-                </div>
-                
+                    <h3 class="text-gray-800 font-medium text-lg">RECOJO A DOMICILIO</h3>
+                    <p class="text-gray-700 font-light text-base">Recogemos tu vehículo, lo llevamos al taller y una vez finalizado el trabajo te lo entregamos en tu domicilio (zonas aledañas)</p>
+                </div>                
             </div>  
         </div>
     </div>
