--- a/src/layouts/LayoutNavBar.astro
+++ b/src/layouts/LayoutNavBar.astro
@@ -9,13 +9,13 @@ import logo from '../img/logo.png'
 ---
 
 
-<nav class="bg-gray-800">
+<nav class="fixed top-0 z-10 w-full bg-gray-800">
     <div class="container mx-auto max-w-full grid grid-cols-2 px-8 py-4">
         <div class="logo">
             <img src={logo.src} alt="logo">
         </div>
         <div>
-            <slot />
+            <slot/>
         </div>
     </div>
 </nav>
