--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,23 +1,21 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import NavBar from '../layouts/LayoutNavBar.astro';
 import LayoutCard from '../layouts/LayoutCard.astro';
-import NavbarLinks from '../componentsReact/navbarLinks';
-import Carousel from '../layouts/LayoutCarousel.astro';
-import Cards from '../componentsReact/card'
+import LayoutCarousel from '../layouts/LayoutCarousel.astro';
+
 import SectionInicio from '../components/SectionInicio.astro'
+
+import Cards from '../componentsReact/card'
+
 ---
 
 <Layout title="Innova Car Service">
-	<NavBar>
-		<NavbarLinks />
-	</NavBar>
 	<main>
-		<Carousel />
+		<LayoutCarousel />
 		<LayoutCard>
 			<Cards />
 		</LayoutCard>
 		<SectionInicio />	
-	</main>
+	</main>	
 </Layout>
 
