Termino la pagina de Mantenimiento

--- a/src/pages/inicio/mecanica-especializada.astro
+++ b/src/pages/inicio/mecanica-especializada.astro
@@ -10,10 +10,10 @@ import iCambioPastillas from "../../img/mantenimiento/imagenMantenimiento5.png"
 import iAlineacionBalanceo from "../../img/mantenimiento/imagenMantenimiento6.png";
 ---
 
-<Layout title="Mantenimiento"> 
+<Layout title="Mecanica especializada"> 
     <main>
-        <LayoutInicio title="Mantenimiento Preventivos">
-            <h3 class="w-full text-center text-3xl py-5">Taller Automotriz</h3>
+        <LayoutInicio title="Mecanica especializada">
+            
             <div class="px-72">
 
                 <div class="grid grid-cols-2 justify-center py-6">
