Estilando un poco

--- a/src/layouts/LayoutFooter.astro
+++ b/src/layouts/LayoutFooter.astro
@@ -10,8 +10,8 @@ import whatsapp from '../img/footer/whatsapp.png'
     <div>
         <img src={logoInnova.src} alt="" class="mx-auto py-7">        
     </div>
-    <div class="flex justify-around">
-        <div class="text-white flex flex-col text-center align-middle">
+    <div class="flex justify-around max-sm:flex-col">
+        <div class="text-white flex flex-col text-center align-middle items-center">
             <div class="text-3xl">CONTACTENOS</div>
             <div class="text-2xl my-4 flex flex-row">
                 <img src={whatsapp.src} alt="whatsapp">
