--- a/src/pages/mecanica-especializada.astro
+++ b/src/pages/mecanica-especializada.astro
@@ -18,7 +18,7 @@ import imagen10 from "../img/mecanicaEspecializada/imagen10.png"
     <main>
         <LayoutInicio title="Mecanica especializada">
             
-            <div class="px-72">
+            <div class="px-72 max-sm:px-10">
 
                 <div class="grid grid-cols-2 justify-center py-6">
                     <div>
