--- a/src/pages/planchado-pintura.astro
+++ b/src/pages/planchado-pintura.astro
@@ -12,7 +12,7 @@ import imagen4 from "../img/planchadoPintura/imagen4.png"
     <main>
         <LayoutInicio title="Planchado y Pintura">
             
-            <div class="px-72">
+            <div class="px-72 max-sm:px-10">
 
                 <div class="grid grid-cols-2 justify-center py-6">
                     <div>
