--- a/src/components/SectionInicio.astro
+++ b/src/components/SectionInicio.astro
@@ -8,21 +8,21 @@ import imagen3 from '../img/sectionInicio/todos-los-servicios.png'
 import imagen4 from '../img/sectionInicio/recojo-domicilio.png'
 ---
 <div class="container mx-auto max-w-xxl">
-    <div class="grid grid-cols-2 gap-8">
+    <div class="grid grid-cols-2 gap-8 max-md:grid-cols-1 py-10">
         <div class="max-w-4">
             <img src={imagen1.src} alt="" class="mx-auto w-full">
             <p class="text-center text-gray-800 font-semibold text-xl py-2">SERVICIO GARANTIZADO</p>
             <p class="text-center text-gray-700 font-medium text-lg py-1">Nuestra garantia cubre todas las partes instaladas y los trabajos realizados en nuestro taller</p>
         </div>
         <div class="grid content-between">
-            <div class="grid grid-cols-2 gap-4">
+            <div class="grid grid-cols-2 gap-4 max-md:py-5">
                 <img src={imagen2.src} alt="" class="mx-auto w-full">
                 <div class="grid content-around justify-start">
-                    <h3 class="text-gray-800 font-medium text-lg">INFORMACION PERMANENTE</h3>
+                    <h3 class="text-gray-800 font-medium text-lg ">INFORMACION PERMANENTE</h3>
                     <p class="text-gray-700 font-light text-base">Te damos opciones de repuestos y servicios para adaptarnos a tu presupuesto.</p>
                 </div>
             </div>
-            <div class="grid grid-cols-2 gap-4">
+            <div class="grid grid-cols-2 gap-4 max-md:py-5">
                 <img src={imagen3.src} alt="" class="mx-auto w-full">
                 <div class="grid content-around justify-start">
                     <h3 class="text-gray-800 font-medium text-lg">TODOS LOS SERVICIOS</h3>
@@ -30,7 +30,7 @@ import imagen4 from '../img/sectionInicio/recojo-domicilio.png'
                 </div>
 
             </div>
-            <div class="grid grid-cols-2 gap-4">
+            <div class="grid grid-cols-2 gap-4 max-md:py-5">
                 <img src={imagen4.src} alt="" class="mx-auto w-full">
                 <div class="grid content-around justify-start">
                     <h3 class="text-gray-800 font-medium text-lg">RECOJO A DOMICILIO</h3>
