--- a/src/layouts/LayoutCard.astro
+++ b/src/layouts/LayoutCard.astro
@@ -1,6 +1,6 @@
 
 <div class="container mx-auto max-w-xxl">
-    <div class="grid grid-cols-2 lg:gap-x-67 md:gap-x-40 sm:gap-x-10 gap-y-10 text-center">
+    <div class="grid grid-cols-2 lg:gap-x-40 md:gap-x-20 max-sm:gap-x-10 xs:gap-x-5 gap-y-10 text-center max-sm:px-10 max-md:grid-cols-1">
         <slot/>
     </div>		
 </div>
