--- a/src/layouts/LayoutInicio.astro
+++ b/src/layouts/LayoutInicio.astro
@@ -4,8 +4,8 @@ interface Props {
 }
 const { title } = Astro.props;
 ---
-<div class="container mx-auto max-w-full">
-    <div class="w-full bg-slate-400 mt-16">
+<div class="container mx-auto max-w-full mt-16">
+    <div class="bg-slate-400">
         <h2 class="text-center text-7xl py-4">{title}</h2>
     </div>
     <div>
