--- a/src/layouts/LayoutNavBar.astro
+++ b/src/layouts/LayoutNavBar.astro
@@ -14,7 +14,7 @@ import logo from '../img/logo.png'
         <div class="logo">
             <img src={logo.src} alt="logo">
         </div>
-        <div>
+        <div class="max-md:hidden">
             <slot/>
         </div>
     </div>
