Ordenando codigo de parte del cliente

--- a/src/pages/admin/dashboard.astro
+++ b/src/pages/admin/dashboard.astro
@@ -3,6 +3,4 @@ import LayoutAdmin from "../../layouts/layoutsAdmin/LayoutAdmin.astro";
 
 ---
 
-<LayoutAdmin title="Dashboard">
-    <h1>Hello World</h1>
-</LayoutAdmin>
+<LayoutAdmin title="Dashboard"/>
