--- a/src/pages/admin/login.astro
+++ b/src/pages/admin/login.astro
@@ -22,7 +22,7 @@ import logo from '../../img/logo.png'
 	<body class="font-sans h-full">
         <div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
             <div class="sm:mx-auto sm:w-full sm:max-w-sm">
-                <a href="/"><img class="mx-auto h-10 w-auto" src={logo.src} alt="Your Company"></a>
+                <a href="/"><img class="mx-auto h-10 w-auto" src={logo.src} alt="Innova Car Service"></a>
               
               <h2 class="mt-10 text-center text-2xl font-bold leading-9 tracking-tight text-gray-900">Iniciar Sesion con tu cuenta</h2>
             </div>
@@ -46,7 +46,7 @@ import logo from '../../img/logo.png'
                 </div>
           
                 <div>
-                  <button type="submit" class="flex w-full justify-center rounded-md bg-red-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-red-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-600">Iniciar Sesion</button>
+                  <a href="/admin/dashboard"><button type="submit" class="flex w-full justify-center rounded-md bg-red-600 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-red-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-red-600">Iniciar Sesion</button></a>
                 </div>
               </form>
 
