--- a/src/layouts/layoutsAdmin/LayoutPanel.astro
+++ b/src/layouts/layoutsAdmin/LayoutPanel.astro
@@ -1,8 +1,9 @@
 ---
 import logo from '../../img/logotipoInnova.png'
 import { Icon } from 'astro-icon'
+import ContentAdmin from '../../components/contentAdmin.astro';
 ---
-<nav class="bg-slate-900 border-b border-slate-600">
+<nav class="bg-slate-900 border-b border-slate-600 py-3">
     <div class="flex justify-between items-center px-14">
         <!-- Aumenté el padding aquí para añadir espacio en los lados -->
         <!-- Ícono de Menú -->
@@ -12,7 +13,7 @@ import { Icon } from 'astro-icon'
 
         <!-- Logo -->
         <div class="ml-1">
-            <img src={logo.src} alt="logo">
+            <a href="/"><img src={logo.src} alt="logo"></a>
         </div>
 
         <!-- Ícono de Notificación y Perfil -->
@@ -24,29 +25,24 @@ import { Icon } from 'astro-icon'
         </div>
     </div>
 </nav>
-<div class="max-lg:invisible container grid grid-cols-12 mx-auto max-w-full gap-4">    
+<div class=" container grid grid-cols-12 mx-auto max-w-full gap-4">    
     <div class="col-span-2 bg-slate-900 min-h-screen">
-        <div class="grid grid-cols-6 py-3 text-white hover:bg-slate-800">
-            <Icon class="justify-self-center col-start-2" name="ic:baseline-dashboard" width="30" height="30" />
-            <p class="text-2xl grid col-span-3">Dashboard</p> 
+        <div >
+            <a href="../../components/contentAdmin" class="grid grid-cols-6 py-5 text-white hover:bg-slate-800"><Icon class="justify-self-center col-start-2" name="ic:baseline-dashboard" width="30" height="30" />
+            <p class="text-2xl grid col-span-3">Dashboard</p></a> 
         </div>
-        <div class="grid grid-cols-6 py-3 text-white hover:bg-slate-800">
+        <div class="grid grid-cols-6 py-5 text-white hover:bg-slate-800">
             <Icon class="justify-self-center col-start-2" name="ic:round-mail" width="30" height="30" />
             <p class="text-2xl grid col-span-3">Cotizaciones</p> 
         </div>
-        <div class="grid grid-cols-6 py-3 text-white hover:bg-slate-800">
+        <div class="grid grid-cols-6 py-5 text-white hover:bg-slate-800">
             <Icon class="justify-self-center col-start-2" name="ic:baseline-account-box" width="30" height="30" />
             <p class="text-2xl grid col-span-3">Mi Cuenta</p> 
         </div>
-        <div class="grid grid-cols-6 py-3 text-white hover:bg-slate-800">
+        <div class="grid grid-cols-6 py-5 text-white hover:bg-slate-800">
             <Icon class="justify-self-center col-start-2" name="ic:baseline-exit-to-app" width="30" height="30" />
             <p class="text-2xl grid col-span-3">Cerrar Sesion</p> 
         </div>
     </div>
-    <div class="col-span-10">
-        <div class="bg-amber-950 my-10 mx-5 p-2 rounded-md min-h">
-            <div class="bg-slate-800 mx-auto w-full text-center p-5">Lorem</div>
-        </div>
-    </div>
-    
+    <ContentAdmin/>
 </div>
