--- a/src/layouts/LayoutNavBar.astro
+++ b/src/layouts/LayoutNavBar.astro
@@ -13,7 +13,7 @@ import logo from '../img/logo.png'
     <div class="bg-gray-300 text-right px-5 py-1">
         <a href="/admin/login"><button type="button" class="rounded-lg bg-red-700 py-1 text-white text-xs font-semibold leading-6 hover:bg-red-600 px-2">Iniciar Sesion</button></a>
     </div>
-    <div class="container mx-auto max-w-full grid grid-cols-2 px-8 py-4">        
+    <div class="grid grid-cols-2 px-8 py-4">        
         <div class="logo">
             <img src={logo.src} alt="logo">
         </div>
