--- a/src/pages/admin/dashboard.astro
+++ b/src/pages/admin/dashboard.astro
@@ -1,6 +1,8 @@
 ---
 import LayoutAdmin from "../../layouts/layoutsAdmin/LayoutAdmin.astro";
-
+import LayoutPanel from '../../layouts/layoutsAdmin/LayoutPanel.astro'
 ---
 
-<LayoutAdmin title="Dashboard"/>
+<LayoutAdmin title="Dashboard">
+    <LayoutPanel/>
+</LayoutAdmin>
