--- a/src/pages/mecanica-especializada.astro
+++ b/src/pages/mecanica-especializada.astro
@@ -2,145 +2,13 @@
 import Layout from "../layouts/Layout.astro";
 import LayoutInicio from "../layouts/LayoutInicio.astro";
 
-import imagen1 from "../img/mecanicaEspecializada/imagen1.png"
-import imagen2 from "../img/mecanicaEspecializada/imagen2.png"
-import imagen3 from "../img/mecanicaEspecializada/imagen3.png"
-import imagen4 from "../img/mecanicaEspecializada/imagen4.png"
-import imagen5 from "../img/mecanicaEspecializada/imagen5.png"
-import imagen6 from "../img/mecanicaEspecializada/imagen6.png"
-import imagen7 from "../img/mecanicaEspecializada/imagen7.png"
-import imagen8 from "../img/mecanicaEspecializada/imagen8.png"
-import imagen9 from "../img/mecanicaEspecializada/imagen9.png"
-import imagen10 from "../img/mecanicaEspecializada/imagen10.png"
+import { MecanicEspecializada } from "../componentsReact/contentService.jsx"
 ---
 
-<Layout title="Mecanica especializada"> 
-    <main>
-        <LayoutInicio title="Mecanica especializada">
-            
-            <div class="px-72 max-sm:px-10">
-
-                <div class="grid grid-cols-2 justify-center py-6">
-                    <div>
-                       <img src={imagen1.src} alt="tablero electronico" class="mx-auto rounded-lg"> 
-                    </div>                    
-                    <div class="grid content-around justify-start border-l-2 border-black pl-5">
-                        <h3 class="text-gray-800 font-medium text-2xl">Tablero electronico</h3>
-                        <p>Detectamos fallas mecánicas eléctricas y electrónicas. Identificamos las fallas actuales y prevenimos las fallas futuras Escáner homologados para VW, Audi, Seat, Bmw, Peugeot, Renault, entre otros</p>
-                        <p class="text-gray-700 font-light text-base">El diagnóstico de fallas sirve para detectar los problemas particulares del vehículo; debido a que este funciona con diferentes sistemas que trabajan entre sí, es importante realizar el diagnóstico para solucionar la falla sin hacer cambios de repuestos innecesarios. Cuando sientas que tu carro tiene ruidos extraños, o deficiencia de alguno de los sistemas como suspensión, frenos, motor, entre otros. ¡No esperes el símbolo de “check engine” en el tablero!</p>
-                        <a href=""><button class="w-full rounded-xl bg-red-700 py-2 text-white font-semibold leading-6 hover:bg-red-600">COTIZA TU SERVICIO</button></a>
-                    </div>
-                </div>    
-                
-                <div class="grid grid-cols-2 justify-center py-6">
-                    <div>
-                       <img src={imagen2.src} alt="reparacion-motor" class="mx-auto rounded-lg"> 
-                    </div>                    
-                    <div class="grid content-around justify-start border-l-2 border-black pl-5">
-                        <h3 class="text-gray-800 font-medium text-2xl">Reparacion de motor</h3>
-                        <p>Medición, rectificado y cambio de piezas desgastadas    |   Prueba de fugas de compresión   |   Revisión del consumo de aceite   |   Revisión de ruidos anormales del motor.</p>
-                        <p class="text-gray-700 font-light text-base">Consiste en desarmar el motor, limpiarlo a fondo, medir y rectificar las partes, cambiar las piezas que sufren mayor desgaste y volverlas a ensamblar según especificaciones de la casa matriz. Estamos a la vanguardia de la tecnología, lo que nos permite garantizar un mantenimiento óptimo de su vehículo cuando lo necesite.</p>
-                        <a href=""><button class="w-full rounded-xl bg-red-700 py-2 text-white font-semibold leading-6 hover:bg-red-600">COTIZA TU SERVICIO</button></a>
-                    </div>
-                </div>  
-                
-                <div class="grid grid-cols-2 justify-center py-6">
-                    <div>
-                       <img src={imagen3.src} alt="afinamiento-electronico" class="mx-auto rounded-lg"> 
-                    </div>                    
-                    <div class="grid content-around justify-start border-l-2 border-black pl-5">
-                        <h3 class="text-gray-800 font-medium text-2xl">Afinamiento electronico</h3>
-                        <p>Revisión del sistema eléctrico, Alineamiento de luces, Revisión y/o cambio de batería, Verificación de cargas de baterías, entre otros. <br> Programación del panel electrónico, Verificación de cierre centralizado, Mandos electrónicos, entre otros</p>
-                        <p class="text-gray-700 font-light text-base">La Tecnología Automotriz nos muestra avances como los vehículos totalmente eléctricos y vehículos de combustión controlados electrónicamente.Todos los componentes eléctricos de un vehículo están sometidos a condiciones extremas como: agua, polvo, temperaturas, líquidos, corrosión, etc… Por eso es necesario revisarlos y validar su correcto funcionamiento.</p>
-                        <a href=""><button class="w-full rounded-xl bg-red-700 py-2 text-white font-semibold leading-6 hover:bg-red-600">COTIZA TU SERVICIO</button></a>
-                    </div>
-                </div>
-                
-                <div class="grid grid-cols-2 justify-center py-6">
-                    <div>
-                       <img src={imagen4.src} alt="amortiguadores" class="mx-auto rounded-lg"> 
-                    </div>                    
-                    <div class="grid content-around justify-start border-l-2 border-black pl-5">
-                        <h3 class="text-gray-800 font-medium text-2xl">Amortiguadores</h3>
-                        <p>Cambio de amortiguadores (delanteros o posteriores)   |   Alineación y balanceo   |   Cambio de rotulas, trapecios, entre otros.</p>
-                        <p class="text-gray-700 font-light text-base">Los amortiguador es la pieza principal del sistema de suspensión del automóvil. Es el encargado de controlar el comportamiento de las ruedas cuando hacen contacto con la vía por la que transitas y son los que dan estabilidad, confort y seguridad a la conducción, pues evitan los movimientos bruscos del carro, entre otras cosas.</p>
-                        <a href=""><button class="w-full rounded-xl bg-red-700 py-2 text-white font-semibold leading-6 hover:bg-red-600">COTIZA TU SERVICIO</button></a>
-                    </div>
-                </div> 
-
-                <div class="grid grid-cols-2 justify-center py-6">
-                    <div>
-                       <img src={imagen5.src} alt="kit-distribucion" class="mx-auto rounded-lg"> 
-                    </div>                    
-                    <div class="grid content-around justify-start border-l-2 border-black pl-5">
-                        <h3 class="text-gray-800 font-medium text-2xl">Kit de distribucion</h3>
-                        <p>Diagnóstico del sistema de distribución   |   Cambio del kit de distribución, correa, polea, tensor, etc    |    Sincronización de motor.</p>
-                        <p class="text-gray-700 font-light text-base">Conecta y sincroniza el movimiento de las válvulas con los pistones, hace funcionar la bomba de agua que refrigera el motor y/o la bomba de aceite, así que de ella dependen el movimiento del motor y su temperatura. El cambio es necesario porque sufre desgaste natural por su exposición a altas temperaturas y la tensión constante, te recomendamos cambiarlo entre los 40,000 y 50,000 km dependiendo del modelo del vehículo.</p>
-                        <a href=""><button class="w-full rounded-xl bg-red-700 py-2 text-white font-semibold leading-6 hover:bg-red-600">COTIZA TU SERVICIO</button></a>
-                    </div>
-                </div> 
-
-                <div class="grid grid-cols-2 justify-center py-6">
-                    <div>
-                       <img src={imagen6.src} alt="kit-embrague" class="mx-auto rounded-lg"> 
-                    </div>                    
-                    <div class="grid content-around justify-start border-l-2 border-black pl-5">
-                        <h3 class="text-gray-800 font-medium text-2xl">Kit de embrague</h3>
-                        <p>Diagnóstico del embrague   |   Inspección de disco de embrague, presión, mecanismo   |   La renovación se da entre los 80,000 y 120,000 kms.   |   Aceite de caja</p>
-                        <p class="text-gray-700 font-light text-base">El embrague es un mecanismo que permite al vehículo circular a diferentes velocidades gracias al uso de las diferentes marchas, funciona acoplando y desacoplando la caja de cambios y el motor de esta forma se igualan las velocidades de ambos. Con el uso y el paso del tiempo, estas piezas comienzan a desgastarse, cuando esto suceda notaremos los fallos al cambiar la marcha, o el motor tendrá problemas al arrancar.</p>
-                        <a href=""><button class="w-full rounded-xl bg-red-700 py-2 text-white font-semibold leading-6 hover:bg-red-600">COTIZA TU SERVICIO</button></a>
-                    </div>
-                </div> 
-
-                <div class="grid grid-cols-2 justify-center py-6">
-                    <div>
-                       <img src={imagen7.src} alt="cajas-transmision" class="mx-auto rounded-lg"> 
-                    </div>                    
-                    <div class="grid content-around justify-start border-l-2 border-black pl-5">
-                        <h3 class="text-gray-800 font-medium text-2xl">Cajas de Transmision | mecanica | automatica</h3>
-                        <p>Diagnóstico de cajas MT  /  AT   |   Revisión de Caja de transmisión manual   |   Revisión de Caja de transmisión automática   |   Aceite de caja</p>
-                        <p class="text-gray-700 font-light text-base">La caja de cambios administra mediante sincronizadores y engranajes las revoluciones del motor para darle mayor desplazamiento. Los ruidos, el tacto en la palanca y el estado del aceite son tres síntomas que nos pueden proporcionar una valiosa información acerca del 'estado de salud' de la caja de velocidades de nuestro vehículo.</p>
-                        <a href=""><button class="w-full rounded-xl bg-red-700 py-2 text-white font-semibold leading-6 hover:bg-red-600">COTIZA TU SERVICIO</button></a>
-                    </div>
-                </div> 
-
-                <div class="grid grid-cols-2 justify-center py-6">
-                    <div>
-                       <img src={imagen8.src} alt="cajas-mecatronicas" class="mx-auto rounded-lg"> 
-                    </div>                    
-                    <div class="grid content-around justify-start border-l-2 border-black pl-5">
-                        <h3 class="text-gray-800 font-medium text-2xl">Cajas mecatronicas DSG</h3>
-                        <p>Diagnóstico de Cajas de doble embrague DSG   |   Mantenimiento de Cajas DSG   |   Reparación de Cajas Mecatrónicas DSG   |   Aceite de caja DSG</p>
-                        <p class="text-gray-700 font-light text-base">El mantenimiento básico de las cajas de cambios DSG consiste en la sustitución periódica del aceite y el filtro. Se recomienda realizarlo cada 50.000 km aproximadamente. Es esencial realizar un correcto mantenimiento ya que un aceite contaminado puede afectar tanto a los embragues como a la unidad mecatrónica, pudiendo provocar graves daños en la caja misma</p>
-                        <a href=""><button class="w-full rounded-xl bg-red-700 py-2 text-white font-semibold leading-6 hover:bg-red-600">COTIZA TU SERVICIO</button></a>
-                    </div>
-                </div> 
-
-                <div class="grid grid-cols-2 justify-center py-6">
-                    <div>
-                       <img src={imagen9.src} alt="escaner-alta-gama" class="mx-auto rounded-lg"> 
-                    </div>                    
-                    <div class="grid content-around justify-start border-l-2 border-black pl-5">
-                        <h3 class="text-gray-800 font-medium text-2xl">Escaner de alta gama | Osciloscopio</h3>
-                        <p>Localizamos la avería de un circuito   |   Medimos la amplitud, fase, frecuencia y distorsiones de señales eléctricas de las partes electrónicas de tu vehículo   |   Reparaciones de las partes electrónicas automotrices</p>
-                        <p class="text-gray-700 font-light text-base">Escáner de Alta Gama para realizar un diagnóstico acertado en las reparaciones automotrices. Este instrumento permite interpretar gráficamente lo que esta sucediendo con los componentes electrónicos. Trabajamos con vehículos convencionales  y vehículos de alta gama europeos Volkswagen, Audi, Seat, Skoda, BMW, Peugeot, Citroen, Volvo, etc.</p>
-                        <a href=""><button class="w-full rounded-xl bg-red-700 py-2 text-white font-semibold leading-6 hover:bg-red-600">COTIZA TU SERVICIO</button></a>
-                    </div>
-                </div> 
-
-                <div class="grid grid-cols-2 justify-center py-6">
-                    <div>
-                       <img src={imagen10.src} alt="cambio-fluidos" class="mx-auto rounded-lg"> 
-                    </div>                    
-                    <div class="grid content-around justify-start border-l-2 border-black pl-5">
-                        <h3 class="text-gray-800 font-medium text-2xl">Cambio de fluidos</h3>
-                        <p>Líquido de frenos    |   La revisión es periódica (02 veces al año) para mayor seguridad Refrigerante   |   Conviene revisarlo cada 20,000 km.  antes que pierda propiedades Hidrolina   |   La dirección asistida se revisa una vez al año</p>
-                        <p class="text-gray-700 font-light text-base">Durante todo el año, haga frío o calor, cada cierto tiempo debes revisar los niveles de los líquidos del vehículo. De ellos depende que el motor funcione bien y no tengas que visitar el taller antes de tiempo y con consecuencias, generalmente, más graves de lo deseado.</p>
-                        <a href=""><button class="w-full rounded-xl bg-red-700 py-2 text-white font-semibold leading-6 hover:bg-red-600">COTIZA TU SERVICIO</button></a>
-                    </div>
-                </div> 
-
+<Layout title="Mecanica Especializada"> 
+        <LayoutInicio title="Mecanica Especializada">
+            <div class="sm:mx-10 md:mx-52 max-sm:px-10 grid grid-cols-1">
+                <MecanicEspecializada />
             </div>
         </LayoutInicio>
-    </main>    
 </Layout>
