--- a/src/layouts/LayoutInicio.astro
+++ b/src/layouts/LayoutInicio.astro
@@ -4,11 +4,11 @@ interface Props {
 }
 const { title } = Astro.props;
 ---
-<div class="container mx-auto max-w-full mt-24">
-    <div class="bg-slate-400">
-        <h2 class="text-center text-7xl py-4">{title}</h2>
+<div>
+    <div class="bg-slate-400 mt-24">
+        <h2 class="text-center text-5xl py-4">{title}</h2>
     </div>
-    <div>
+    <div class="mx-auto">
         <slot/>
     </div> 
     
