--- a/src/layouts/layoutsAdmin/LayoutAdmin.astro
+++ b/src/layouts/layoutsAdmin/LayoutAdmin.astro
@@ -2,7 +2,7 @@
 interface Props {
 	title: string;
 }
-import LayoutPanel from '../layoutsAdmin/LayoutPanel.astro'
+
 import { ViewTransitions } from 'astro:transitions';
 const { title } = Astro.props;
 ---
@@ -18,6 +18,6 @@ const { title } = Astro.props;
     <title>{title}</title>
 </head>
 <body class="bg-gray-200">
-    <LayoutPanel/>
+    <slot/>
 </body>
 </html>
