mejorando las funcionalidades de la pagina

--- a/src/layouts/LayoutFooter.astro
+++ b/src/layouts/LayoutFooter.astro
@@ -12,19 +12,19 @@ import whatsapp from '../img/footer/whatsapp.png'
     </div>
     <div class="flex justify-around max-sm:flex-col">
         <div class="text-white flex flex-col text-center align-middle items-center">
-            <div class="text-3xl">CONTACTENOS</div>
-            <div class="text-2xl my-4 flex flex-row">
+            <div class="xl:text-3xl lg:text-xl md:text-lg">CONTACTENOS</div>
+            <div class="xl:text-2xl lg:text-xl md:text-lg my-4 flex flex-row">
                 <img src={whatsapp.src} alt="whatsapp">
                 <span class="px-3">980240567</span> 
             </div>
-            <div class="text-2xl my-4 flex flex-row">
+            <div class="xl:text-2xl lg:text-xl md:text-lg my-4 flex flex-row">
                 <img src={whatsapp.src} alt="whatsapp">
                 <span class="px-3">940105875</span>                 
             </div>
         </div>
         <div class="text-white">
             <div class="text-white flex flex-col text-center">
-                <div class="text-3xl">REDES SOCIALES</div>
+                <div class="xl:text-3xl lg:text-xl md:text-lg">REDES SOCIALES</div>
                 <div class="text-2xl my-8 flex flex-row justify-around">
                     <img src={facebook.src} alt="facebook">
                     <img src={instagram.src} alt="instagram">
@@ -35,6 +35,6 @@ import whatsapp from '../img/footer/whatsapp.png'
         </div>
     </div>
     <div class="text-white text-center py-3">
-        <span>2023 Creado por Grupo 01 - Desarrollo Web</span>
+        <span>Ⓡ2023 Creado por Grupo 01 - Desarrollo Web</span>
     </div>
 </div>
