--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,7 +3,6 @@ interface Props {
 	title: string;
 }
 import LayoutNavBar from '../layouts/LayoutNavBar.astro';
-import NavbarLinks from '../componentsReact/navbarLinks';
 import LayoutFooter from './LayoutFooter.astro';
 import { ViewTransitions } from 'astro:transitions';
 const { title } = Astro.props;
@@ -21,10 +20,8 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body class="font-sans">
-		<LayoutNavBar>
-			<NavbarLinks />
-		</LayoutNavBar>
-		<slot />
+		<LayoutNavBar />
+			<slot />
 		<LayoutFooter />
 	</body>
 </html>
