--- a/src/layouts/LayoutCard.astro
+++ b/src/layouts/LayoutCard.astro
@@ -1,6 +1,6 @@
 
 <div class="container mx-auto max-w-xxl">
-    <div class="grid grid-cols-2 items-center py-10 max-md:grid-cols-1">
+    <div class="grid grid-cols-2 items-center py-10 lg-max:grid-cols-1">
         <slot/>
     </div>		
 </div>
