--- a/src/layouts/LayoutNavBar.astro
+++ b/src/layouts/LayoutNavBar.astro
@@ -1,24 +1,63 @@
 ---
-interface ImageMetaData {
-    src: string;
-    height: number;
-    width: number;
-}
 
 import logo from '../img/logo.png'
 ---
+<div class="sticky w-full top-0 inset-0 z-10">
+  <div class="antialiased bg-gray-100 dark-mode:bg-gray-900">
+  <div class="w-full text-gray-700 bg-white dark-mode:text-gray-200 dark-mode:bg-gray-800">
+    <div x-data="{ open: true }" class="flex flex-col max-w-screen-xl px-4 mx-auto md:items-center md:justify-between md:flex-row md:px-6 lg:px-8">
+      <div class="flex flex-row items-center justify-between p-4">
+        <a href="#" class="text-lg font-semibold tracking-widest text-gray-900 uppercase rounded-lg dark-mode:text-white focus:outline-none focus:shadow-outline">
+            <img src={logo.src} alt="">
+        </a>
+        <button class="rounded-lg md:hidden focus:outline-none focus:shadow-outline" @click="open = !open">
+          <svg fill="currentColor" viewBox="0 0 20 20" class="w-6 h-6">
+            <path x-show="!open" fill-rule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM9 15a1 1 0 011-1h6a1 1 0 110 2h-6a1 1 0 01-1-1z" clip-rule="evenodd"></path>
+            <path x-show="open" fill-rule="evenodd" d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z" clip-rule="evenodd"></path>
+          </svg>
+        </button>
+      </div>
+      <nav :class="{'flex': open, 'hidden': !open}" class="flex-col flex-grow hidden pb-4 md:pb-0 md:flex md:justify-end md:flex-row">
+        <a class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg md:mt-0 md:ml-4 hover:text-white focus:text-white hover:bg-red-700 focus:bg-red-700 focus:outline-none focus:shadow-outline" href="/">Inicio</a>
 
+        <div @click.away="open = false" class="relative" x-data="{ open: false }">
+          <button @click="open = !open" class="flex flex-row text-gray-900 bg-gray-200 items-center w-full px-4 py-2 mt-2 text-sm font-semibold text-left bg-transparent rounded-lg md:w-auto md:inline md:mt-0 md:ml-4 hover:text-white focus:text-white hover:bg-red-700 focus:bg-red-700 focus:outline-none focus:shadow-outline">
+            <span>Servicios</span>
+            <svg fill="currentColor" viewBox="0 0 20 20" :class="{'rotate-180': open, 'rotate-0': !open}" class="inline w-4 h-4 mt-1 ml-1 transition-transform duration-200 transform md:-mt-1"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
+          </button>
+          <div x-show="open" x-transition:enter="transition ease-out duration-100" x-transition:enter-start="transform opacity-0 scale-95" x-transition:enter-end="transform opacity-100 scale-100" x-transition:leave="transition ease-in duration-75" x-transition:leave-start="transform opacity-100 scale-100" x-transition:leave-end="transform opacity-0 scale-95" class="absolute w-full md:max-w-screen-sm md:w-screen mt-2 origin-top-right">
+            <div class="px-2 pt-2 pb-4 bg-white rounded-md shadow-lg dark-mode:bg-gray-700">
+              <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                <a class="flex flex-row items-start rounded-lg bg-transparent p-2 hover:text-white focus:text-white hover:bg-red-700 focus:bg-red-800 focus:outline-none focus:shadow-outline" href="/mantenimiento">
+                  <div class="ml-3">
+                    <p class="font-semibold">Mantenimiento</p>
+                    <p class="text-sm">Cuidamos tu vehiculo</p>
+                  </div>
+                </a>
 
-<nav class="fixed top-0 z-10 w-full bg-slate-200">
-    <div class="bg-gray-300 text-right px-5 py-1">
-        <a href="/admin/login"><button type="button" class="rounded-lg bg-red-700 py-1 text-white text-xs font-semibold leading-6 hover:bg-red-600 px-2">Iniciar Sesion</button></a>
+                <a class="flex flex-row items-start rounded-lg bg-transparent p-2 dark-mode:hover:bg-gray-600 dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:text-gray-200 hover:text-white focus:text-white hover:bg-red-700 focus:bg-red-800 focus:outline-none focus:shadow-outline" href="/mecanica-especializada">
+                  <div class="ml-3">
+                    <p class="font-semibold">Mecanica Especializada</p>
+                    <p class="text-sm">Detectamos fallas actuales y prevenimos fallas futuras</p>
+                  </div>
+                </a>
+
+                <a class="flex flex-row items-start rounded-lg bg-transparent p-2 dark-mode:hover:bg-gray-600 dark-mode:focus:bg-gray-600 dark-mode:focus:text-white dark-mode:hover:text-white dark-mode:text-gray-200 hover:text-white focus:text-white hover:bg-red-700 focus:bg-red-800 focus:outline-none focus:shadow-outline" href="/planchado-pintura">
+                  <div class="ml-3">
+                    <p class="font-semibold">Planchado y Pintura</p>
+                    <p class="text-sm">Renovamos tu vehiculo con materiales de alta calidad</p>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>           
+        <a class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg md:mt-0 md:ml-4 hover:text-white focus:text-white hover:bg-red-700 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="#">Promociones</a>
+        <a class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg md:mt-0 md:ml-4 hover:text-white focus:text-white hover:bg-red-700 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="#">Contactame</a>
+        <a class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg md:mt-0 md:ml-4 bg-red-500 text-gray-400 hover:text-white focus:text-white hover:bg-red-700 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="/admin/login">Inicia Sesion</a>  
+      </nav>
     </div>
-    <div class="grid grid-cols-2 px-8 py-4">        
-        <div class="logo">
-            <img src={logo.src} alt="logo">
-        </div>
-        <div class="max-md:hidden">
-            <slot/>
-        </div>
-    </div>
-</nav>
+  </div>
+</div>
+</div>
+<script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
