--- a/src/layouts/layoutsAdmin/LayoutAdmin.astro
+++ b/src/layouts/layoutsAdmin/LayoutAdmin.astro
@@ -17,7 +17,7 @@ const { title } = Astro.props;
     <ViewTransitions />
     <title>{title}</title>
 </head>
-<body class="bg-gray-200">
+<body >
     <slot/>
 </body>
 </html>
