--- a/src/layouts/layoutsAdmin/LayoutPanel.astro
+++ b/src/layouts/layoutsAdmin/LayoutPanel.astro
@@ -2,7 +2,7 @@
 import logo from '../../img/logotipoInnova.png'
 import { Icon } from 'astro-icon'
 ---
-<nav class="bg-slate-900 border-b border-slate-600 py-3">
+<nav class="bg-blue-gray-900 border-b py-3">
     <div class="flex justify-between items-center px-14">
         <!-- Aumenté el padding aquí para añadir espacio en los lados -->
         <!-- Ícono de Menú -->
@@ -25,21 +25,21 @@ import { Icon } from 'astro-icon'
     </div>
 </nav>
 <div class=" container grid grid-cols-12 mx-auto max-w-full gap-4">    
-    <div class="col-span-2 bg-slate-900 min-h-screen">
+    <div class="col-span-2 bg-blue-gray-900 min-h-screen">
         <div>
-            <a href="/admin/cotizaciones" class="grid grid-cols-6 py-5 text-white hover:bg-slate-800">
+            <a href="/admin/cotizaciones" class="grid grid-cols-6 py-5 text-white hover:bg-blue-gray-500">
                 <Icon class="justify-self-center col-start-2" name="ic:round-mail" width="30" height="30" />
                 <p class="text-2xl grid col-span-3">Cotizaciones</p>
             </a>
         </div>
         <div>
-            <a href="#" class="grid grid-cols-6 py-5 text-white hover:bg-slate-800">
+            <a href="#" class="grid grid-cols-6 py-5 text-white hover:bg-blue-gray-500">
                 <Icon class="justify-self-center col-start-2" name="ic:baseline-account-box" width="30" height="30" />
                 <p class="text-2xl grid col-span-3">Mi Cuenta</p>
             </a>
         </div>
         <div>
-            <a href="/" class="grid grid-cols-6 py-5 text-white hover:bg-slate-800">
+            <a href="/" class="grid grid-cols-6 py-5 text-white hover:bg-blue-gray-500">
                 <Icon class="justify-self-center col-start-2" name="ic:baseline-exit-to-app" width="30" height="30" />
                 <p class="text-2xl grid col-span-3">Cerrar Sesion</p>
             </a>
