Configurando login para autenticacion e inicio de sesion con la API

--- a/src/components/SectionInicio.astro
+++ b/src/components/SectionInicio.astro
@@ -15,14 +15,14 @@ import imagen4 from '../img/sectionInicio/recojo-domicilio.png'
             <div class="grid grid-cols-2 gap-4 lg-max:py-5">
                 <img src={imagen2.src} alt="" class="mx-auto w-full">
                 <div class="grid content-around justify-start">
-                    <h3 class="text-gray-800 font-medium text-lg ">INFORMACION PERMANENTE</h3>
+                    <h3 class="text-gray-800 font-semibold text-lg ">INFORMACION PERMANENTE</h3>
                     <p class="text-gray-700 font-light text-base">Te damos opciones de repuestos y servicios para adaptarnos a tu presupuesto.</p>
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 lg-max:py-5">
                 <img src={imagen3.src} alt="" class="mx-auto w-full">
                 <div class="grid content-around justify-start">
-                    <h3 class="text-gray-800 font-medium text-lg">TODOS LOS SERVICIOS</h3>
+                    <h3 class="text-gray-800 font-semibold text-lg">TODOS LOS SERVICIOS</h3>
                     <p class="text-gray-700 font-light text-base">Desde el cambio de aceite hasta la reparación del motor, incluyendo planchado y pintura</p>
                 </div>
 
@@ -30,7 +30,7 @@ import imagen4 from '../img/sectionInicio/recojo-domicilio.png'
             <div class="grid grid-cols-2 gap-4 lg-max:py-5">
                 <img src={imagen4.src} alt="" class="mx-auto w-full">
                 <div class="grid content-around justify-start">
-                    <h3 class="text-gray-800 font-medium text-lg">RECOJO A DOMICILIO</h3>
+                    <h3 class="text-gray-800 font-semibold text-lg">RECOJO A DOMICILIO</h3>
                     <p class="text-gray-700 font-light text-base">Recogemos tu vehículo, lo llevamos al taller y una vez finalizado el trabajo te lo entregamos en tu domicilio (zonas aledañas)</p>
                 </div>                
             </div>  
