--- a/src/layouts/LayoutNavBar.astro
+++ b/src/layouts/LayoutNavBar.astro
@@ -54,7 +54,7 @@ import logo from '../img/logo.png'
         </div>           
         <a class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg md:mt-0 md:ml-4 hover:text-white focus:text-white hover:bg-red-700 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="#">Promociones</a>
         <a class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg md:mt-0 md:ml-4 hover:text-white focus:text-white hover:bg-red-700 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="#">Contactame</a>
-        <a class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg md:mt-0 md:ml-4 bg-red-500 text-gray-400 hover:text-white focus:text-white hover:bg-red-700 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="/admin/login">Inicia Sesion</a>  
+        <a class="px-4 py-2 mt-2 text-sm font-semibold bg-transparent rounded-lg md:mt-0 md:ml-4 bg-red-500 text-gray-400 hover:text-white focus:text-white hover:bg-red-700 focus:bg-gray-200 focus:outline-none focus:shadow-outline" href="/admin/LayoutLogin">Iniciar Sesion</a>  
       </nav>
     </div>
   </div>
