--- a/src/layouts/LayoutFooter.astro
+++ b/src/layouts/LayoutFooter.astro
@@ -10,9 +10,9 @@ import whatsapp from '../img/footer/whatsapp.png'
     <div>
         <img src={logoInnova.src} alt="" class="mx-auto py-7">        
     </div>
-    <div class="flex justify-around max-sm:flex-col">
+    <div class="flex justify-around sm-max:flex-col ">
         <div class="text-white flex flex-col text-center align-middle items-center">
-            <div class="xl:text-3xl lg:text-xl md:text-lg">CONTACTENOS</div>
+            <div class="xl:text-3xl lg:text-xl md:text-lg font-semibold">CONTACTENOS</div>
             <div class="xl:text-2xl lg:text-xl md:text-lg my-4 flex flex-row">
                 <img src={whatsapp.src} alt="whatsapp">
                 <span class="px-3">980240567</span> 
@@ -24,8 +24,8 @@ import whatsapp from '../img/footer/whatsapp.png'
         </div>
         <div class="text-white">
             <div class="text-white flex flex-col text-center">
-                <div class="xl:text-3xl lg:text-xl md:text-lg">REDES SOCIALES</div>
-                <div class="text-2xl my-8 flex flex-row justify-around">
+                <div class="xl:text-3xl lg:text-xl md:text-lg font-semibold">REDES SOCIALES</div>
+                <div class="text-2xl my-8 flex flex-row justify-center">
                     <img src={facebook.src} alt="facebook">
                     <img src={instagram.src} alt="instagram">
                     <img src={youtube.src} alt="youtube">
