Se termino modulo de cotizar y un customhook

--- a/src/layouts/LayoutFooter.astro
+++ b/src/layouts/LayoutFooter.astro
@@ -35,6 +35,6 @@ import whatsapp from '../img/footer/whatsapp.png'
         </div>
     </div>
     <div class="text-white text-center py-3">
-        <span>Ⓡ2023 Creado por Grupo 01 - Desarrollo Web</span>
+        <span>&copy; 2023 Creado por Grupo 01 - Desarrollo Web</span>
     </div>
 </div>
