--- a/src/layouts/LayoutInicio.astro
+++ b/src/layouts/LayoutInicio.astro
@@ -5,7 +5,7 @@ interface Props {
 const { title } = Astro.props;
 ---
 <div>
-    <div class=" mt-16 bg-blue-gray-300">
+    <div class="bg-blue-gray-300">
         <h2 class="text-center text-5xl py-4">{title}</h2>
     </div>
     <div class="mx-auto">
