--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,6 +5,9 @@ interface Props {
 import LayoutNavBar from '../layouts/LayoutNavBar.astro';
 import LayoutFooter from './LayoutFooter.astro';
 import { ViewTransitions } from 'astro:transitions';
+
+import { NavbarWithMegaMenu } from "../componentsReact/navbar"
+
 const { title } = Astro.props;
 ---
 
@@ -20,7 +23,7 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body class="font-sans">
-		<LayoutNavBar />
+		<NavbarWithMegaMenu client:visible/>
 			<slot />
 		<LayoutFooter />
 	</body>
