refactorizando contenido card

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,9 +12,9 @@ import LCarouselImage from '../componentsReact/carousel.jsx'
 <Layout title="Innova Car Service">
 	<main>
 		<LCarouselImage client:visible/>
-		<LayoutCard>
-			<Cards />
-		</LayoutCard>
+			<LayoutCard>
+				<Cards client:visible/>
+			</LayoutCard
 		<SectionInicio />	
 	</main>	
 </Layout>
