--- a/src/layouts/LayoutCard.astro
+++ b/src/layouts/LayoutCard.astro
@@ -1,6 +1,6 @@
 
-<div class="container mx-auto max-w-xxl">
-    <div class="grid grid-cols-2 items-center py-10 lg-max:grid-cols-1">
+<div class="mx-auto max-w-screen-lg">
+    <div class="flex flex-wrap gap-6 py-10 justify-around">
         <slot/>
     </div>		
 </div>
