--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import LCarouselImage from '../componentsReact/carousel.jsx'
 		<LCarouselImage client:visible/>
 			<LayoutCard>
 				<Cards client:visible/>
-			</LayoutCard
+			</LayoutCard>
 		<SectionInicio />	
 	</main>	
 </Layout>
